--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,6 +10,31 @@
 header {
     background-color: var(--primary-color);
     color: var(--accent2-color);
+    display: grid;
+    grid-template-columns: .5fr 1fr;
+}
+
+.logo {
+    width: 115px;
+    height: auto;
+    margin: auto;
+    margin-right: 2.5rem;
+}
+
+header nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.index,
+.about,
+.trips,
+.contact {
+    padding: .5rem 1.5rem;
+    border: 1px solid black;
+    background-color: var(--secondary-color);
 }
 
 * {
@@ -42,6 +67,94 @@ section,
 article {
     margin: 16px;
     padding: 8px;
+}
+
+section p {
+    text-align: justify;
+}
+
+.history {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.history-title {
+    grid-column: 1/4;
+    text-align: center;
+}
+
+.history-text {
+    margin: 5px;
+    padding: 8px;
+}
+
+.history-img {
+    width: 250px;
+    height: auto;
+    margin: auto;
+}
+
+.adventure {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.adventure-title {
+    grid-column: 1/6;
+    text-align: center;
+}
+
+.adventure-img {
+    width: 150px;
+    height: auto;
+    margin: auto;
+    padding-top: 15px;
+}
+
+.adventure-text {
+    grid-column: 1;
+    grid-row: 3;
+    text-align: center;
+
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--primary-color);
+}
+
+footer p {
+    flex: 1;
+    text-align: center;
+    color: var(--secondary-color);
+    margin-left: 10rem;
+}
+
+.socialmedia {
+    display: flex;
+    gap: 5px;
+    text-decoration: none;
+}
+
+.socialmedia img {
+    width: 30px;
+    height: auto;
+}
+
+.hero {
+    position: relative;
+}
+
+.hero img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 h1 {
